--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+# To run with Docker:
+#    1. install any Docker Postgres image you want
+#    2. update the name of the Postgres image in 'docker-compose.yml' file
+#    3. comment localhost datasource credentials, and uncomment following 3 lines
+#    4. finally, run following commands from terminal, respectively
+#           4.1. docker build . -t air-quality-api:1.0
+#           4.2. docker-compose up
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/AirQuality
 spring.datasource.username=ege
-spring.datasource.password=
+spring.datasource.password=ege
+
+# spring.datasource.url=jdbc:postgresql://db:5432/AirQualityApi
+# spring.datasource.username=AirQualityApi
+# spring.datasource.password=AirQualityApi
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 application.title=Air Quality
@@ -12,5 +25,5 @@ sec.expire.time=86400000
 
 server.port=8080
 logging.level.org.springframework=info
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
