--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # To run with Docker:
-#    1. install any Docker Postgres image you want
+#    1. install Docker, and setup any Docker Postgres image you want
 #    2. update the name of the Postgres image in 'docker-compose.yml' file
 #    3. comment localhost datasource credentials, and uncomment following 3 lines
-#    4. finally, run following commands from terminal, respectively
+#    4. finally, run following commands at the project folder CLI, respectively
 #           4.1. docker build . -t air-quality-api:1.0
 #           4.2. docker-compose up
 
