--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 #           4.1. docker build . -t air-quality-api:1.0
 #           4.2. docker-compose up
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/AirQuality
-spring.datasource.username=ege
-spring.datasource.password=ege
+spring.datasource.url=jdbc:postgresql://localhost:5432/{YOUR_POSTGRESQL_DB}'
+spring.datasource.username={YOUR_POSTGRESQL_USERNAME}
+spring.datasource.password={YOUR_POSTGRESQL_PASSWORD}
 
 # spring.datasource.url=jdbc:postgresql://db:5432/AirQualityApi
 # spring.datasource.username=AirQualityApi
