Hide sql to observe logs more clearly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ sec.expire.time=86400000
 server.port=8080
 logging.level.org.springframework=info
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
